2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* set-timezone.c: (set_time_notify): ignore no-reply dbus errors when
	setting the time because dbus doesn't use a monotonic clock.
	Patch by Matthias Clasen <mclasen@redhat.com>
	Fix bug #526266.

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (is_appointment): show caldav appointments too.
	Fix by Debian (Roland Mas). Fix bug #501569

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	Use new gweather API, and make sure we always use data from the right
	country. Patch by Dan Winship <danw@gnome.org>. Fix bug #519823.

	* gweather-xml.c: gone, moved to libgweather
	* clock-location.c: updated
	* Makefile.am: updated
	* clock.c: #include <libgweather/gweather-xml.h> rather than
	"gweather-xml.h"
	(find_timezone): if the weather station has a country code
	associated with it, only return timezones that are also located in
	that country.
	(update_timezone): Use the tz-hint and iso-code from the location
	data to more reliably pick a timezone. #519823.
	(find_weather_code): Moved here from gweather-xml.c and updated to
	look for a matching country code as well.

2008-04-03  Vincent Untz  <vuntz@gnome.org>

	Fix initial visibility of the appointments to actually follow the state
	of the expander. Fix bug #524296.

	* calendar-window.c: (create_task_list): add comment
	(create_list_for_appointment_model): add comment and change order of
	gtk_widget_show() and gtk_container_add() to fix the bug
	(add_child): simplify by calling expand_collapse_child()
	(calendar_window_pack_locations): add comment
	* clock.c: (locations_changed): add FIXME about a runtime warning

2008-04-03  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am:
	* timezone.glade: remove timezone.glade, unused now.

2008-04-03  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (update_calendar_popup): nullify a widget pointer when
	closing the popup. Should fix bug #525754, where the destroyed widget
	was used.
